# distributed-tensor-operations

./: .gitignore
distributed/: pyproject.toml
distributed/src/distributed/tensor/: tensor.py
