[project]
name = "distributed"
version = "0.1.0"
description = ""
authors = [
    {name = "Rohan Savargaonkar",email = "rohansavar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.0",
]

[tool.poetry]
packages = [{include = "distributed", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
